Update README.md
updated to add a question and answer